# playora

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
crates/darkos-cli/: Cargo.toml
crates/darkos-cli/src/: main.rs
crates/darkos-core/: Cargo.toml
crates/darkos-core/src/: lib.rs
crates/darkos-db/: Cargo.toml
crates/darkos-db/src/: lib.rs
crates/darkos-firmware/: Cargo.toml
crates/darkos-firmware/src/: lib.rs
crates/darkos-hw/: Cargo.toml
crates/darkos-hw/src/: lib.rs
crates/darkos-perf/: Cargo.toml
crates/darkos-perf/src/: lib.rs
crates/darkos-roms/: Cargo.toml
crates/darkos-roms/src/: lib.rs
crates/darkos-saves/: Cargo.toml
crates/darkos-saves/src/: lib.rs
crates/darkos-storage/: Cargo.toml
crates/darkos-storage/src/: lib.rs
crates/darkos-themes/: Cargo.toml
crates/darkos-themes/src/: lib.rs
crates/darkos-tui/: Cargo.toml
crates/darkos-tui/src/: lib.rs  viewer.rs
crates/darkos-update/: Cargo.toml
crates/darkos-update/src/: lib.rs
crates/playora-agent/: Cargo.toml
crates/playora-agent/src/: activity.rs  audit.rs  autosync.rs  catalog.rs  cfg.rs  clean.rs  cleanup.rs  cloud.rs  compress.rs  coolrom.rs  db.rs  doctor.rs  download.rs  extract.rs  features.rs  fileserver.rs  fix_exit.rs  hotkeys.rs  hw.rs  kodi.rs  launcher.rs  lockfile.rs  main.rs  mainmenu.rs  metadata.rs  myrient.rs  portmaster.rs  repair.rs  resources.rs  restore.rs  saves.rs  scanner.rs  selfupdate.rs  sessions.rs  showlog.rs  sync.rs  tests.rs  ttyui.rs  tui.rs
crates/playora-common/: Cargo.toml
crates/playora-common/src/: lib.rs  sources.rs  systems.rs
crates/playora-server/: Cargo.toml
crates/playora-server/src/: catalog.rs  dashboard.rs  db.rs  main.rs  routes.rs
crates/playora-server/tests/: integration.rs
docs/: CATALOG_RULES.md  DARKOSRE_CARD_AUDIT.md  FEATURE_FLAGS.md  HARDWARE_DATA.md  INSTALL_DARKOSRE.md  LAN_TESTING.md  NETPLAY_LIMITS.md  R36S_BLACK_SCREEN_FIX.md  ROM_TRANSFER_AUDIT.md  TESTING_LOCAL.md  TESTING_R36S.md
scripts/: build-arm64.sh  build-container.sh  console-install.sh  darkos-view-wrap.sh  darkos-view.gptk  install-agent.sh  install-darkos-to-sd.sh  install-darkosre-menu.sh  install-on-device.sh  install-to-sd.sh  port-runner.sh  release.sh  restore-darkosre-menu.sh  restore-roms-from-drive.sh  restore-sd-from-drive.sh  run-local-server.sh  uninstall-agent.sh  upload-firmware.sh
