[workspace]
resolver = "2"
members = ["crates/playora-common", "crates/playora-agent", "crates/playora-server"]

[workspace.package]
edition = "2021"
version = "0.3.5"
authors = ["Rodolfo Peixoto <rodolfog.peixoto@gmail.com>"]
license = "MIT"
rust-version = "1.81"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
walkdir = "2"
sysinfo = "0.32"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["json", "macros"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
crossterm = "0.28"
ratatui = "0.29"
bytesize = "1"
scraper = "0.20"
url = "2"
mdns-sd = { version = "0.11", default-features = false }
flate2 = "1"
tar = "0.4"
self_update = { version = "0.41", default-features = false, features = ["rustls"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
playora-common = { path = "crates/playora-common" }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
unreachable_pub        = "allow"
unused_must_use        = "warn"
missing_debug_implementations = "allow"

[workspace.lints.clippy]
all       = { level = "warn", priority = -1 }
pedantic  = { level = "warn", priority = -1 }
nursery   = { level = "allow", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc      = "allow"
missing_panics_doc      = "allow"
must_use_candidate      = "allow"
cast_possible_truncation = "allow"
cast_precision_loss      = "allow"
cast_sign_loss           = "allow"
cast_lossless            = "allow"
multiple_crate_versions  = "allow"
similar_names            = "allow"
too_many_lines           = "allow"
implicit_hasher          = "allow"
unnecessary_wraps        = "allow"
needless_pass_by_value   = "allow"
return_self_not_must_use = "allow"
struct_excessive_bools   = "allow"
