[package]
name = "darkos-cli"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "darkos"
path = "src/main.rs"

[dependencies]
darkos-core.workspace = true
darkos-hw.workspace = true
darkos-db.workspace = true
darkos-storage.workspace = true
darkos-roms.workspace = true
darkos-saves.workspace = true
darkos-firmware.workspace = true
darkos-themes.workspace = true
darkos-update.workspace = true
darkos-perf.workspace = true
darkos-tui.workspace = true
clap.workspace = true
anyhow.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bytesize.workspace = true
