[package]
name = "darkos-db"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
darkos-core.workspace = true
darkos-hw.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
