[package]
name = "darkos-hw"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
darkos-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
sysinfo.workspace = true
chrono.workspace = true
