[package]
name = "darkos-roms"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
darkos-core.workspace = true
darkos-db.workspace = true
darkos-storage.workspace = true
serde.workspace = true
serde_json.workspace = true
walkdir.workspace = true
sha2.workspace = true
hex.workspace = true
ureq.workspace = true
indicatif.workspace = true
bytesize.workspace = true
anyhow.workspace = true
