[package]
name = "playora-agent"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "playora-agent"
path = "src/main.rs"

[dependencies]
playora-common.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
clap.workspace = true
chrono.workspace = true
uuid.workspace = true
sha2.workspace = true
hex.workspace = true
walkdir.workspace = true
sysinfo.workspace = true
rusqlite.workspace = true
reqwest.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
crossterm.workspace = true
ratatui.workspace = true
bytesize.workspace = true
scraper.workspace = true
url.workspace = true
flate2.workspace = true
tar.workspace = true
self_update.workspace = true
zip.workspace = true
qrcode = "0.14"
libc = "0.2"
axum = { version = "0.7", features = ["json", "macros", "multipart"] }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["io"] }
rand = "0.8"
mdns-sd.workspace = true
urlencoding = "2"
tower-http = { workspace = true, features = ["fs", "cors"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
