[package]
name = "playora-server"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "playora-server"
path = "src/main.rs"

[dependencies]
playora-common.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
rusqlite.workspace = true
clap.workspace = true
uuid.workspace = true
mdns-sd.workspace = true
if-addrs = "0.13"
futures = "0.3"
tokio-stream = "0.1"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
tempfile = "3"

[lints]
workspace = true
